date validation + making it look a bit better

--- a/src/app/Components/admin/admin.component.html
+++ b/src/app/Components/admin/admin.component.html
@@ -26,7 +26,7 @@
       <div class="col">
         <div class="form-group">
           <label for="beanName">Bean Name</label>
-          <input #beanName placeholder="Enter Bean Name" class="form-control" />
+          <input #beanName placeholder="Enter Bean Name" maxlength="60" class="form-control" />
         </div>
       </div>
       <div class="col">
@@ -38,13 +38,13 @@
       <div class="col">
         <div class="form-group">
           <label for="beanAroma">Bean Aroma</label>
-          <input #beanAroma placeholder="Enter Bean Aroma" class="form-control" />
+          <input #beanAroma placeholder="Enter Bean Aroma" maxlength="60" class="form-control" />
         </div>
       </div>
       <div class="col">
         <div class="form-group">
         <label for="beanColour">Bean Colour</label>
-        <input #beanColour placeholder="Enter Bean Colour" class="form-control" />
+        <input #beanColour placeholder="Enter Bean Colour" maxlength="60" class="form-control" />
         </div>
       </div>
     </div>
